--- a/src/Components/SignIn/SignIn.css
+++ b/src/Components/SignIn/SignIn.css
@@ -57,8 +57,9 @@
     margin: 90px auto  0 auto;
      
  }
+ 
 
-.b-color:hover{
+.b-color{
     background-color:  rgba(0, 0, 0, 0.897);
     color: #fff;
 }
